cmake_minimum_required(VERSION 3.16)
project(ICP2D)

set(CMAKE_CXX_STANDARD 14)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Ceres REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${EIGEN3_INCLUDE_DIRS})
include_directories(${CERES_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/include/)
add_library(libicp SHARED ${PROJECT_SOURCE_DIR}/include/icp2d.cpp)
add_executable(icp2d main.cpp)
target_link_libraries(icp2d ${OpenCV_LIBS} ${CERES_LIBRARIES} libicp)
add_executable(crop crop.cpp)
target_link_libraries(crop ${OpenCV_LIBS})
